demok8_ingress/manifests_old/deployment_02.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-ingress-deploy-02
spec:
  selector:
    matchLabels:
      app: demo-ingress-02
  template:
    metadata:
      labels:
        app: demo-ingress-02
    spec:
      containers:
      - name: demo-ingress-02
        image: demok8acr.azurecr.io/demok8_ingress:32
        resources:
          limits:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 80
