demok8_ingress/manifests_old/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-ingress-service-01
spec:
  type: LoadBalancer
  selector:
    app: demo-ingress-01
  ports:
  - port: 80
