demok8_ingress/manifests_old/service_ip_01.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-cip-service-01
  labels:
    app: demo-ingress-01
spec:
  selector:
    app: demo-ingress-01
  ports:
    - port: 80
      targetPort: 80
