demok8_ingress/manifests_old/ingresscontrol.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
  labels:
    name: demoingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/app1"
        backend:
          service:
            name: demo-cip-service-01
            port: 
              number: 80
      - pathType: Prefix
        path: "/app2"
        backend:
          service:
            name: demo-cip-service-02
            port: 
              number: 80
